Removed custom DatePickers as kind of glitchy. Added Styling.

--- a/TermTracker/App.xaml
+++ b/TermTracker/App.xaml
@@ -20,7 +20,16 @@
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="FontSize" Value="Title"/>
+                <Setter Property="FontAttributes" Value="Bold"/>                
+            </Style>
+            <Style x:Key="modalTitle" TargetType="Label">
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="HorizontalTextAlignment" Value="Center"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="FontSize" Value="Title"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="BackgroundColor" Value="#002F51"/>
+                <Setter Property="Padding" Value="10"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
