--- a/TermTracker/Views/TermConstructPage.xaml
+++ b/TermTracker/Views/TermConstructPage.xaml
@@ -3,20 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TermTracker.CustomRender"
              x:Class="TermTracker.Views.TermConstructPage">
-    <NavigationPage.TitleView>
-        <StackLayout>
-            <Label 
-                Text="WGU Term Tracker" 
-                Style="{StaticResource pageTitle}"
-             />
-        </StackLayout>
-    </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout>
-            <Entry Placeholder="Term Title" />
-            <local:CustomStartDatePicker />
-            <local:CustomEndDatePicker />
             <StackLayout>
+                <Label 
+                    Text="Term" 
+                    Style="{StaticResource modalTitle}"
+                 />
+            </StackLayout>
+            <Entry Placeholder="Term Title" />
+            <!--<local:CustomStartDatePicker />
+            <local:CustomEndDatePicker />-->
+            <Label Text="Start Date"/>
+            <DatePicker x:Name="startDateSelected"/>
+            <Label Text="End Date"/>
+            <DatePicker x:Name="endDateSelected"/>
+            <StackLayout VerticalOptions="End">
                 <Button Text="Save"/>
                 <Button Text="Cancel" Clicked="CancelButton_Clicked"/>
             </StackLayout>
