--- a/TermTracker/Views/TermConstructPage.xaml
+++ b/TermTracker/Views/TermConstructPage.xaml
@@ -11,14 +11,16 @@
                     Style="{StaticResource modalTitle}"
                  />
             </StackLayout>
-            <Entry Placeholder="Term Title" x:Name="termTitle"/>
-            <!--<local:CustomStartDatePicker />
-            <local:CustomEndDatePicker />-->
-            <Label Text="Start Date"/>
-            <DatePicker x:Name="startDateSelected"/>
-            <Label Text="End Date"/>
-            <DatePicker x:Name="endDateSelected"/>
-            <StackLayout>
+            <StackLayout VerticalOptions="StartAndExpand">
+                <Entry Placeholder="Term Title" x:Name="termTitle"/>
+                <!--<local:CustomStartDatePicker />
+                <local:CustomEndDatePicker />-->
+                <Label Text="Start Date"/>
+                <DatePicker x:Name="startDateSelected"/>
+                <Label Text="End Date"/>
+                <DatePicker x:Name="endDateSelected"/>
+            </StackLayout>
+            <StackLayout VerticalOptions="End">
                 <Button Text="Save" Clicked="SaveButton_Clicked"/>
                 <Button Text="Cancel" Clicked="CancelButton_Clicked"/>
             </StackLayout>
