--- a/TermTracker/Views/TermsMainPage.xaml
+++ b/TermTracker/Views/TermsMainPage.xaml
@@ -11,19 +11,21 @@
              />
         </StackLayout>
     </NavigationPage.TitleView>
-    <!--<ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add"/>
-    </ContentPage.ToolbarItems>-->
     <ContentPage.Content>
         <StackLayout>
-            <ListView x:Name="TermsList" HasUnevenRows="True" ItemsSource="{Binding Terms}">
+            <ListView 
+                x:Name="TermsList" 
+                HasUnevenRows="True" 
+                ItemsSource="{Binding Terms}"
+            >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell >
+                        <ViewCell ClassId="{Binding Id}">
                             <StackLayout>
                                 <Button 
                                     Text="{Binding Title}"
                                     Style="{StaticResource listItem}"
+                                    Clicked="Term_Clicked"
                                 />
                             </StackLayout>
                         </ViewCell>
@@ -31,7 +33,11 @@
                 </ListView.ItemTemplate>
             </ListView>
             <StackLayout VerticalOptions="End">
-                <Button Text="Add Term" Clicked="AddTerm_Clicked"/>
+                <Button
+                    Text="Add Term"
+                    Style="{StaticResource regularButton}"
+                    Clicked="AddTerm_Clicked"
+                />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
