Update working with issue updating Term on TermMainPage. Need to implement global  data

--- a/TermTracker/Views/TermPage.xaml
+++ b/TermTracker/Views/TermPage.xaml
@@ -5,7 +5,7 @@
     <NavigationPage.TitleView>
         <StackLayout>
             <Label 
-                Text="{Binding SelectedTerm.Title}" 
+                x:Name="navTitle"
                 Style="{StaticResource navPageTitle}"
              />
         </StackLayout>
