--- a/TermTracker/Views/TermConstructPage.xaml
+++ b/TermTracker/Views/TermConstructPage.xaml
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:TermTracker.CustomRender"
              x:Class="TermTracker.Views.TermConstructPage">
     <ContentPage.Content>
         <StackLayout>
@@ -13,15 +12,24 @@
             </StackLayout>
             <StackLayout VerticalOptions="StartAndExpand">
                 <Entry Placeholder="Term Title" x:Name="termTitle"/>
-                <!--<local:CustomStartDatePicker />
-                <local:CustomEndDatePicker />-->
                 <Label Text="Start Date"/>
                 <DatePicker x:Name="startDateSelected"/>
                 <Label Text="End Date"/>
                 <DatePicker x:Name="endDateSelected"/>
             </StackLayout>
             <StackLayout VerticalOptions="End">
-                <Button Text="Save" Clicked="SaveButton_Clicked"/>
+                <Button 
+                    x:Name="SaveButton" 
+                    Style="{StaticResource regularButton}"
+                    Text="Save" 
+                    Clicked="SaveButton_Clicked"
+                />
+                <Button 
+                    x:Name="SaveEditButton" 
+                    Style="{StaticResource regularButton}"
+                    Text="Save" 
+                    Clicked="SaveEditButton_Clicked"
+                />
                 <Button Text="Cancel" Clicked="CancelButton_Clicked"/>
             </StackLayout>
         </StackLayout>
