--- a/TermTracker/Views/TermPage.xaml
+++ b/TermTracker/Views/TermPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:globals="clr-namespace:TermTracker"
              x:Class="TermTracker.Views.TermPage">
     <NavigationPage.TitleView>
         <StackLayout>
@@ -22,7 +23,7 @@
                 <ListView
                     x:Name="CoursesList"
                     HasUnevenRows="True" 
-                    ItemsSource="{Binding Courses}"
+                    ItemsSource="{Binding Source= {x:Static globals:Globals.Courses}}"
                 >
                     <ListView.ItemTemplate>
                         <DataTemplate>
