--- a/TermTracker/Views/TermPage.xaml
+++ b/TermTracker/Views/TermPage.xaml
@@ -32,6 +32,7 @@
                                     <Button
                                         Text="{Binding Title}"
                                         Style="{StaticResource listItem}"
+                                        Clicked="Course_Clicked"
                                     />
                                 </StackLayout>
                             </ViewCell>
