--- a/TermTracker/Views/CoursePage.xaml
+++ b/TermTracker/Views/CoursePage.xaml
@@ -1,7 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:globals="clr-namespace:TermTracker"
              x:Class="TermTracker.Views.CoursePage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="assessmentButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#002F51"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BorderWidth" Value="1" />
+                <Setter Property="BorderColor" Value="White"/>
+            </Style>
+            <Style x:Key="shareNotesButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#002F51"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="WidthRequest" Value="150"/>
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="CornerRadius" Value="15"/>
+                <Setter Property="Margin" Value="0,20,0,20"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <NavigationPage.TitleView>
         <StackLayout>
             <Label 
@@ -11,16 +30,65 @@
         </StackLayout>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        <StackLayout>
+        <ScrollView>
+
             <StackLayout>
-                <Label 
-                    x:Name="CourseDateRange"
-                    Style="{StaticResource termDateRange}"
-                 />
+                <StackLayout VerticalOptions="StartAndExpand">
+                    <Label 
+                        x:Name="CourseDateRange"
+                        Style="{StaticResource dateRange}"
+                     />
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Status" HorizontalOptions="StartAndExpand" Margin="20,0,0,0" FontAttributes="Bold"/>
+                        <Label Text="In Progress"  x:Name="statusSelection" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                    <Label Text="Instructor's Info:" HorizontalOptions="Start" Margin="20,0,0,0" FontAttributes="Bold"/>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Name:" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                        <Label Text="Bob Richards"  x:Name="instructorsName" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Phone:" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                        <Label Text="360-756-8923"  x:Name="instructorsPhone" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Email:" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                        <Label Text="test@test.com"  x:Name="instructorsEmail" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                    <Label Text="Notes:" Margin="20,0,0,0" FontAttributes="Bold"/>
+                    <Label Text="These are the notes!!!!" x:Name="notes" Margin="20,0,20,0" LineBreakMode="WordWrap"/>
+                    <Button 
+                        Text="Share Notes"
+                        Style="{StaticResource shareNotesButton}"
+                        Clicked="ShareNotes_Clicked"
+                    />
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Notifications Enabled:" HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
+                        <Switch 
+                            x:Name="notificationsEnabledSwitch"
+                            HorizontalOptions="CenterAndExpand"
+                            IsEnabled="False"
+                            Scale="1.2"/>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout VerticalOptions="End">
+                    <Button 
+                        Text="Course Assessments"
+                        Style="{StaticResource assessmentButton}"
+                        Clicked="CourseAssessments_Clicked"
+                    />
+                    <Button 
+                        Text="Edit Course"
+                        Style="{StaticResource regularButton}"
+                        Clicked="EditCourse_Clicked"
+                    />
+                    <Button 
+                        Text="Delete Course"
+                        Style="{StaticResource deleteButton}"
+                        Clicked="DeleteCourse_Clicked"
+                    />
+                </StackLayout>
             </StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
